@@ -1,0 +1,51 @@
+"id","x","y1","y2","y3","y4","y5","z1","z2","z3","z4","z5"
+1,1,0.319409980503564,1.28052796111386,1.47331630008825,-1.22577693137086,1.29943790335091,0.496955806200903,0.648175257967753,0.760647546426671,-0.917784518418502,-0.110993751518923
+2,1,0.568265578893937,1.37750758134396,0.3112179440795,1.68959750058359,0.945505350898063,0.666354677068719,-0.483930668114501,0.621590831419847,1.2483572398272,-0.220495530078859
+3,1,0.525164537788312,1.75495977084634,2.5062036953188,0.480242778764961,0.727547386857154,-0.267104876417005,0.847759618225396,0.241545130865721,0.0588519297704926,-0.139875194185348
+4,1,-0.605306540611552,0.548751185919487,0.792970038903022,-0.180797960792813,-1.35393342833055,-0.114775291962265,0.651972151819386,0.443336804213075,-0.421545704322191,-0.0273822874426501
+5,1,0.464640952611637,-0.312975309809327,-0.247362671740362,-1.82496025283659,-0.333488574264376,-0.0529497971370652,0.190056699182695,-0.036352270336047,-1.11853055827821,-0.395321616369413
+6,1,-0.653474392627643,-1.05696276903324,-0.342556552237893,0.706755370308712,-0.84944940875302,0.806017672107363,-0.209517799903251,0.192782512561536,0.685288235055265,0.489635914707144
+7,0,0.200116351306996,-0.157352199600472,1.89834457903264,-0.0602531158157088,-0.953399443950066,-0.724715130677976,-0.0789096060058684,0.184318443328083,0.779367679005718,0.143334580259218
+8,0,-0.635050420660473,-0.146262600473974,-0.970293527631715,-1.64099156455796,-0.300479012584632,0.511573214889613,-0.453044429799142,-0.170704776106476,0.795092595787408,0.564523679912195
+9,0,0.0250589277022994,-1.18304433485196,0.930169306379859,0.50686125027196,0.564465385638878,0.117092593616391,-1.64092166163482,0.99771214577637,-0.826872998910293,-0.369490839274149
+10,0,-0.139870217063839,0.533936720273853,0.0277883781323492,-1.69356705733774,1.5068030383017,0.234750395312086,0.264987496805732,0.151185102163905,-0.777786226138382,0.924885166515731
+11,1,1.18998624852228,2.64039116909963,2.28161930469582,-0.734004437341582,2.52294892161565,0.270720558808312,1.30609759037664,0.243057676975923,-0.164453009983933,-0.363637856801422
+12,1,-1.76175289354922,0.335710051012831,1.21102269888266,-0.792832680995017,1.15057212869732,-0.957614519662749,-0.75568542034913,-0.738551458728946,-0.656422680335288,-0.39001785836651
+13,1,2.15753552394217,1.82970081106,-0.626333501824081,0.370534923846774,2.91487254823758,-0.271407703492788,0.760416306814316,-1.06286956471332,0.510934900111107,0.944231222648619
+14,1,-0.333883776544596,-0.274150467106882,1.2633940490592,-0.0582214409691491,0.0791876820027583,-0.0728654368506247,-1.48162784439843,-0.476016127712982,-0.728394189532581,-0.599537152825268
+15,1,1.85868154817881,-1.01101711961553,1.36801643269408,3.33488795566503,0.166154420009754,-0.408517658302918,-0.572211806308148,0.0924190422107078,-0.0301010132863455,-0.155471733842447
+16,1,2.31444200656034,1.6668393686895,1.70062916968434,2.60026159888366,1.92824299521305,1.58102616680309,1.28930016118782,0.103253900393417,0.616611315492793,0.534858988649521
+17,0,0.196572199780201,-1.55175080148272,0.87079723688461,0.957995803870938,0.223617208854562,0.805502713218963,-0.323624216267718,0.743034426216799,-0.168681668342538,1.06550854939066
+18,0,0.514782631379207,-0.473439648228595,2.39365431423896,0.724922330721615,1.55120506401394,1.35468170201786,-0.00656474811631425,1.66575905399555,-0.0940576769167362,0.792092585404538
+19,0,0.777385525027215,0.400124976070828,1.65728793543428,0.989953078098492,1.84844506224454,1.22655640668721,-0.272244404435939,-0.491313425781972,0.162626418449879,0.894611496581547
+20,0,-2.03811881843416,0.921587897937523,-0.117564354518706,2.40775718407255,1.05230594303834,-1.28950835037659,-0.320622240635711,0.619569413252721,0.58403622608009,1.05039233096372
+21,1,-1.00862038778376,-2.3454377383955,-0.415952402603148,0.910986231543223,-0.980750377595682,-0.901737806040792,-1.99004728256851,-0.475741421039386,-0.551403489050757,-1.05448964210985
+22,1,0.698091316860612,-0.247986824300537,1.89906090185542,-0.0581670781901983,-0.0994324313547241,0.775846606856524,1.16769216356357,-0.752016134121778,-0.447489588432857,0.0507658762835806
+23,1,-0.853494287958076,-1.90720606733198,0.698455095735349,0.114216182508536,0.197100355531439,-1.70583908044953,-0.061157486569151,0.256637090070884,-0.531801458902639,-1.19092120694522
+24,1,1.78192151331712,0.23852405587221,0.778023181536571,1.59245791845177,0.063986299152066,0.921702889256399,0.572496991738181,0.684065204420713,0.937955770812838,0.482742547694645
+25,1,-0.320608322035311,-0.370384731688937,-0.034826429868825,-1.51019554528595,-0.419629247385078,0.056673906102509,-0.97278369795874,0.121826038253395,-0.247318316532514,0.44200539864989
+26,1,-2.18338583809234,0.74526237371608,1.31016382563,-0.0729466719689762,-1.34374272649642,-1.07272865862073,-0.872052700351537,0.0607489016050154,-0.39643048253183,-0.0238532173222861
+27,0,0.387106000052652,-0.914971487724564,-1.42238173232081,0.215979550015531,1.2911862944803,0.0417111713602548,0.111844920900838,-0.749212930388272,0.752884854320298,1.1343449921815
+28,0,2.11091168756879,1.07124396083697,1.60103298556951,-1.32384780030982,1.71997085294023,1.07126096167315,0.983816869606687,0.251870747533387,0.846924321319888,0.838032721283823
+29,0,1.07897426508971,0.0894816067831389,2.69381005737461,1.4878031276916,2.54238822390168,0.839535024824499,-0.0047509814811626,0.529523242054634,0.71597481775971,1.26720658520083
+30,0,2.29557663809524,1.54429353980467,-0.0236137960650984,0.134763315345048,1.14580552274014,0.213149198722315,-0.527745571925021,0.0318233528282718,-0.911674611812506,-0.36462482776617
+31,1,-0.719001053444318,0.896671603519446,-0.709128008023115,-0.256789003280123,0.215779735,-0.500993540560464,-0.557452114538761,-1.19970571817062,-0.222492839888044,0.600271845993848
+32,1,-0.150243595603041,-0.505357443015405,0.408167692554855,-0.331570330945129,0.939562732176675,-1.15000175047353,-0.709352476302678,0.558842536114725,-0.466725408392874,0.58496617613462
+33,1,1.92956693199261,0.717062056664114,1.3667224950307,0.174530549019333,0.341616176383993,1.01977818382738,-0.183519471153216,0.973493541455576,0.229353185038765,1.26873413578278
+34,1,1.70672157899767,0.95641365121244,0.786779985764254,-0.0185745861692506,-0.509746276399772,-0.0708661832876445,-0.322875712549744,0.383645472827238,-0.488395498944258,0.689027319234462
+35,1,-2.28583914031459,0.517215292979562,0.728432273733655,-0.209690925050835,-0.191317422396368,-0.677634042950582,-0.175081135969814,-0.0821320331843433,-0.44969018080751,-0.870049331599718
+36,1,-0.944051089843603,-0.217663696146579,0.0716622587996399,-0.938978161417119,-1.07599004769605,-0.913864686743075,-0.410845690078038,0.252788078910699,-0.272532040359843,-0.183580345135362
+37,0,-0.475014206724756,0.707213043349472,0.549806688393566,0.652106564383326,1.50838604130406,-0.860007351822828,-0.0449521825664138,0.00488932488258401,-0.283895898682659,0.513233810209584
+38,0,0.920803671849823,0.48700987346706,-0.644161438805842,0.922572191937908,1.05200059023513,0.492627486544475,-0.0412048000589982,0.460912671095954,0.400782803289525,0.268622137377669
+39,0,-0.311617634320346,-0.0965921648164699,0.164814634844123,0.148869973188848,0.71040409040253,-0.0362788753825027,0.54494390011602,-0.884259254543761,0.780442344739223,1.55349707917302
+40,0,1.50577290148938,1.72751374097814,-0.260991736619337,1.58791841103579,-0.305686309006586,0.704472276171084,0.0593284735886548,0.220304493555806,0.28248429676354,0.135689427490803
+41,1,1.48510868464625,-1.29527410156874,-1.19232192407389,0.674233576330552,1.50469387748161,1.08065312085177,-0.519053490372814,0.114998439818919,0.7171999716945,1.20880739155047
+42,1,2.82263784518789,0.83115984632959,0.81615463830625,1.68888097574582,0.136903423200534,0.0581859404504958,-0.722066697372448,-0.0963340147486996,-0.582046939128203,-0.0272098073971124
+43,1,1.44351577874505,2.34055869530761,-0.359876824077454,1.31462083197454,-1.75814083198597,0.508070263532958,-0.245891777819525,0.667775910774192,1.47645516778237,-0.104763974055285
+44,1,-0.976553317655744,-1.97388062115769,0.989466602861053,-0.0016413628144184,-0.163164769586677,-0.341366954370097,-0.698375787522417,0.97005209718391,-0.6898302461951,0.557714536964222
+45,1,-0.910730675242776,-0.283844140035114,0.64358135306349,-0.77853206120078,-1.45203643951569,-0.349857334037603,0.478614826152075,0.911665717071877,-0.30880628280962,-0.117631739538951
+46,1,-0.978423497956585,0.90326371497972,-0.854750070492757,0.694021959337079,1.07106815276494,-0.464986283333106,1.3816534697596,-0.151323377950925,0.297686428881998,1.23569746333102
+47,0,0.762297804032782,-1.34495216215532,-0.163446892183474,-0.100217560256241,0.955264605207097,-0.875679419928005,-0.449831654186247,-0.556594826407252,-0.889169601679133,-0.643845979015787
+48,0,-1.04666310367328,-2.24684298861596,-1.7934228400091,-0.569686028436806,-0.253797004685757,-0.354883866845624,-0.608857411740829,0.198670865588454,0.397874266967583,0.0201228947867224
+49,0,-0.421987123808777,0.617602200041014,0.48411765774878,-0.30994435680152,0.713094973186761,-0.580893369811752,-0.365107037335238,0.180876047106848,-0.838457556889794,0.0282502358189666
+50,0,1.66546279419071,-0.442386701124244,-1.05800288590033,-3.02443092922219,0.12099890201722,0.527810044266436,0.341714460229692,-0.530167791513736,-0.734995875202239,0.026633062907177
